fix on mobile, playhead resets on stop of play

--- a/styles.css
+++ b/styles.css
@@ -949,9 +949,10 @@ ul.drum-machine__pads li button:active,
   .instrument-container {
     background: #e8e8e8;
     height: 100%;
+    width: 100%;
     max-height: 100%;
     max-width: 100%;
-    padding: 0 10%;
+    padding: 0;
     max-height: 100vh;
     max-width: 100vw;
     border-radius: 0;
